postgresql-common (152) UNRELEASED; urgency=low

  [ Martin Pitt ]
  * debian/backport-ppa: Drop oneiric/quantal for -9.2, only keep
    lucid/precise.

  [ Christoph Berg ]
  * pg_virtualenv: Fix program name in manpage.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 10 Dec 2013 17:37:46 +0100

postgresql-common (151) unstable; urgency=low

  * pg_createcluster: Create /var/run/postgresql when missing.
  * pg_virtualenv: Set PG_CONFIG in single version mode.
  * pg_wrapper: Always use the latest available version of "pg_isready"
    instead of the target cluster's. pg_isready appeared only in 9.3, but is
    usable with older versions as well. Suggested by Peter Eisentraut.
    (Closes: #728599)

 -- Christoph Berg <myon@debian.org>  Thu, 05 Dec 2013 16:32:51 +0100

postgresql-common (150) unstable; urgency=low

  [ Christoph Berg ]
  * Create the postgres group when missing, and add the postgres user to it.
    Could happen when the postgres user was created manually.

  [ Martin Pitt ]
  * debian/supported-versions: Welcome, Ubuntu 14.04! Support 9.3 there.

 -- Martin Pitt <mpitt@debian.org>  Mon, 21 Oct 2013 22:08:20 +0200

postgresql-common (149) unstable; urgency=low

  * debian/supported-versions: Set default version to 9.3. Drop 9.2 from
    wheezy-backports.
  * /etc/apt/apt.conf.d/01autoremove-postgresql: Mark ^postgresql- as
    NeverAutoRemove, so upgrading the "postgresql" meta package doesn't
    automatically remove access to the old clusters. (Closes: #714725)
  * pg_wrapper: Print a more informative error message when program to execute
    was not found in /usr/lib/postgresql.
  * debian/postgresql-client-common.links: Wrap pg_isready and pg_receivexlog.

 -- Christoph Berg <myon@debian.org>  Mon, 09 Sep 2013 14:15:18 +0200

postgresql-common (148) unstable; urgency=low

  [ Christoph Berg ]
  * debian/supported-versions:
    + Interface change: The *last* version returned here is the "default" one.